--- a/assets/css/estilos.css
+++ b/assets/css/estilos.css
@@ -3,7 +3,7 @@
 }
 
 body{
-    background: #4e4d4d;
+    background: #6e6c6c;
     color: white;
     display: grid;
     grid-template-columns: 3fr 10fr;
